--- a/decoupled-site/frontend/src/App.css
+++ b/decoupled-site/frontend/src/App.css
@@ -179,7 +179,7 @@ textarea {
   font-family: inherit;
   border: 2px solid #ccc;
   border-radius: 4px;
-  padding: 1.25em / 2;
+  padding: 0.6em;
   box-sizing: border-box;
 }
 
@@ -288,7 +288,7 @@ label {
 .field-validation-valid,
 .field-validation-error {
   display: block;
-  margin-top: 1.25em / 1.5;
+  margin-top: 0.83em;
   font-size: 0.875em;
 }
 
@@ -307,7 +307,7 @@ label {
 * Inlined to avoid required HTTP connection.
 */
 @media print {
-  @page {
+  @page page {
     margin: 0.5cm;
   }
 
@@ -714,6 +714,7 @@ button,
 html input[type="button"],
 input[type="reset"],
 input[type="submit"] {
+  appearance: button;
   -webkit-appearance: button;
   /* 2 */
   cursor: pointer;
@@ -776,6 +777,8 @@ input[type="number"]::-webkit-outer-spin-button {
 *    (include `-moz` to future-proof).
 */
 input[type="search"] {
+
+  appearance: textfield;
   -webkit-appearance: textfield;
   /* 1 */
   /* 2 */
@@ -3216,15 +3219,6 @@ widths and offsets should be applied to child grid cells.
 *	  l  = large
 *	  xl = xlarge
 */
-.Grid {
-  /**
-    * Horizontal gutters (left & right)
-    */
-  /**
-    * Vertical gutters (top & bottom)
-    */
-}
-
 .Grid.Grid--gutterH,
 .Grid.Grid--gutterA {
   margin-left: -15px;
