--- a/decoupled-site/react-script/src/App.css
+++ b/decoupled-site/react-script/src/App.css
@@ -3979,7 +3979,8 @@ input.search-input::placeholder {
 }
 
 .search-panel{
-  width: 15%;
+  width: 30%;
+  display: inline-block;
 }
 
 .search-icon{
@@ -4060,5 +4061,4 @@ input.search-input::placeholder {
   cursor: pointer;
   font-weight: bold;
   color: #41FFF5;
-
 }
