CG-4433 Search param still displayed as undefined
- Make the param displayed as an empty string instead of undefined
- This bugfix also include CG-4434 Wrong search value when user click on the number of an item in facets

--- a/samples/musicfestival-frontend-react/src/App.css
+++ b/samples/musicfestival-frontend-react/src/App.css
@@ -4008,6 +4008,14 @@ input.search-input::placeholder {
   cursor: pointer;
 }
 
+.facet-item{
+  margin-bottom: 5px;
+}
+
+.facet-item b{
+  float: right;
+}
+
 .search-zone{
   display: inline-block;
   width: 55%;
